[#22] Fix Menu on mobile
Problem:
The menu is broken on mobile

Solution:
z-index has been fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -337,6 +337,7 @@ textarea.form-control {
     background: #f9f9f9;
     top: 0;
     width: 100%;
+    z-index: 10000;    
     box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.09);
   }
   .site-navigation .navbar-brand img {
